# pmdb

./: Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
authy/: urls.py  views.py
authy/migrations/: 0001_initial.py
authy/templates/account/: login.html  signup.html
memedb/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
memedb/management/commands/: import_folder.py
memedb/migrations/: 0001_initial.py  0002_remove_meme_description_remove_meme_tags_meme_tags.py  0003_meme_comparison_hash.py
memedb/signals/: handlers.py
memedb/templates/memedb/: dashboard.html  index.html  meme_list_fragment.html  navbar.html  skeleton.html
memedb/templates/memedb/meme/: create.html  create_suggested_tags_fragment.html  delete.html  meme_fragment.html  update.html
memedb/templatetags/: base64.py
pmdb/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_pmdb.py
